--- a/.github/workflows/netlify-deploy.yml
+++ b/.github/workflows/netlify-deploy.yml
@@ -15,7 +15,10 @@ jobs:
         uses: docker://plentico/plenti:latest
         with:
           entrypoint: /plenti
-          args: build --dir=build
+          args: build
+
+      - name: Rename public folder
+        run: mv public /github/home/build
 
       - name: Deploy Netlify
         uses: danakim/gh-action-deploy-netlify@master
